Fix desktop mega menu visibility

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -77,7 +77,6 @@
 
 @media (min-width: 768px) {
   .dropdown .dropdown-menu {
-    display: block;
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
